--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <section class="all-cats">
+      <div>
+        <ul id="cat-box"></ul>
+      </div>
+    </section>
+    <section class="clicked-cat">
+      <div id="clicked-cat"></div>
+    </section>
     <script src="js/main.js"></script>
   </body>
 </html>
